# pelican-youtube-thumbnails

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  zizmor.yml
pelican/plugins/youtube_thumbnails/: __init__.py  youtube_thumbnails.py
tests/: test_youtube_thumbnails.py
