[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "pelican-youtube-thumbnails"
description = "Pelican plugin to link to YouTube videos by their thumbnail"
version = "0.3.3"
license = {text = "AGPL-3.0-or-later"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "FriedrichFröbel"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "pelican",
    "plugin",
    "youtube",
]
requires-python = ">=3.10, <4"
dependencies = [
    "beautifulsoup4",
    "lxml",
    "Pillow",
    "requests",
]

[project.urls]
Homepage = "https://github.com/FriedrichFroebel/pelican-youtube-thumbnails"
Repository = "https://github.com/FriedrichFroebel/pelican-youtube-thumbnails"
Issues = "https://github.com/FriedrichFroebel/pelican-youtube-thumbnails/issues"
Changelog = "https://github.com/FriedrichFroebel/pelican-youtube-thumbnails/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "flake8",
    "pep8-naming",
    "flake8-bugbear",
    "pelican>=4.5",
    "Markdown",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pelican.plugins.youtube_thumbnails",
    "pelican.plugins.youtube_thumbnails.*"
]
namespaces = true
